package ru.alishev.springcourse.FirstRestApp.repositories;

import org.springframework.data.jpa.repository.EntityGraph;
import org.springframework.data.jpa.repository.JpaRepository;
import org.springframework.stereotype.Repository;
import ru.alishev.springcourse.FirstRestApp.models.Measurement;

import java.util.List;

@Repository
public interface MeasurementRepository extends JpaRepository<Measurement, Integer> {
    long countByRainingTrue();

    @Override
    @EntityGraph(attributePaths = {"sensor"})
    List<Measurement> findAll();
}
